src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__Has_Volunteered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, indicates the Campaign Member &apos;Has Volunteered.&quot;</description>
        <label>Has Volunteered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Hours_Voluntered__c</fullName>
        <description>Manually populated, indicates the number of &quot;Hours Volunteered.&quot;</description>
        <label># Hours Voluntereed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Send_To_Email_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated based on value of Campaign to which Campaign Member is linked. If true will identify records to be synced to Eloqua.</description>
        <inlineHelpText>Populated based on value of Campaign to which Campaign Member is linked. If true will identify records to be synced to Eloqua.</inlineHelpText>
        <label>Send To Email Campaign</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>